--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,22 @@ video.frame-media_left {
 .frame__contentt{
 	position: fixed;
 	bottom: 85vh;
-	right: 25vw;
+	right: 15vw;
 	cursor: pointer;
 	width: 300px;
+}
+.frame__contenttt{
+	position: fixed;
+	bottom: 70vh;
+	right: 15vw;
+	cursor: pointer;
+	width: 300px;
+}
+
+.frame__contentttt{
+	position: fixed;
+	bottom: 45vh;
+	right: 25vw;
+	cursor: pointer;
+	width: 200px;
 }
